--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,6 +11,17 @@ repositories {
 
 dependencies {
     implementation project(':web')
+
+    implementation group: 'org.springframework', name: 'spring-web', version: '5.3.23'
+    implementation group: 'org.springframework', name: 'spring-webmvc', version: '5.3.23'
+
+    //springmvc
+    implementation 'com.fasterxml.jackson.core:jackson-databind:2.13.4.2'
+    implementation 'javax.servlet:javax.servlet-api:4.0.1'
+    implementation 'javax.servlet.jsp:javax.servlet.jsp-api:2.3.3'
+    implementation 'javax.servlet.jsp.jstl:javax.servlet.jsp.jstl-api:1.2.2'
+    implementation "taglibs:standard:1.1.2"
+    implementation group: 'org.apache.tomcat', name: 'tomcat-jdbc', version: '7.0.28'
 }
 
 test {
