--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,6 +22,12 @@ dependencies {
     implementation 'javax.servlet.jsp.jstl:javax.servlet.jsp.jstl-api:1.2.2'
     implementation "taglibs:standard:1.1.2"
     implementation group: 'org.apache.tomcat', name: 'tomcat-jdbc', version: '7.0.28'
+
+    //hibernate
+    implementation group: 'org.hibernate', name: 'hibernate-entitymanager', version: '5.6.12.Final'
+    implementation 'org.hibernate:hibernate-core:5.6.12.Final'
+    testImplementation group: 'com.h2database', name: 'h2', version: '2.1.214'
+    implementation group: 'mysql', name: 'mysql-connector-java', version: '8.0.28'
 }
 
 test {
