--- a/web/build.gradle
+++ b/web/build.gradle
@@ -33,6 +33,16 @@ dependencies {
     implementation "taglibs:standard:1.1.2"
     implementation group: 'org.apache.tomcat', name: 'tomcat-jdbc', version: '7.0.28'
 
+    //hibernate
+    implementation group: 'org.hibernate', name: 'hibernate-entitymanager', version: '5.6.12.Final'
+    implementation 'org.hibernate:hibernate-core:5.6.12.Final'
+    testImplementation group: 'com.h2database', name: 'h2', version: '2.1.214'
+    implementation group: 'mysql', name: 'mysql-connector-java', version: '8.0.28'
+
+    // https://mvnrepository.com/artifact/org.springframework/spring-jdbc
+    implementation group: 'org.springframework', name: 'spring-jdbc', version: '5.3.23'
+
+
 }
 
 test {
