--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,7 @@
 plugins {
     id 'java'
+    id 'org.springframework.boot'
+    id 'io.spring.dependency-management'
 }
 
 group 'com.vishal'
@@ -11,25 +13,9 @@ repositories {
 
 dependencies {
     implementation project(':web')
-
-    implementation group: 'org.springframework', name: 'spring-web', version: '5.3.23'
-    implementation group: 'org.springframework', name: 'spring-webmvc', version: '5.3.23'
-
-    //springmvc
-    implementation 'com.fasterxml.jackson.core:jackson-databind:2.13.4.2'
-    implementation 'javax.servlet:javax.servlet-api:4.0.1'
-    implementation 'javax.servlet.jsp:javax.servlet.jsp-api:2.3.3'
-    implementation 'javax.servlet.jsp.jstl:javax.servlet.jsp.jstl-api:1.2.2'
-    implementation "taglibs:standard:1.1.2"
-    implementation group: 'org.apache.tomcat', name: 'tomcat-jdbc', version: '7.0.28'
-
-    //hibernate
-    implementation group: 'org.hibernate', name: 'hibernate-entitymanager', version: '5.6.12.Final'
-    implementation 'org.hibernate:hibernate-core:5.6.12.Final'
-    testImplementation group: 'com.h2database', name: 'h2', version: '2.1.214'
+    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+    implementation 'org.springframework.boot:spring-boot-starter-web'
+    developmentOnly 'org.springframework.boot:spring-boot-devtools'
+    testImplementation 'org.springframework.boot:spring-boot-starter-test'
     implementation group: 'mysql', name: 'mysql-connector-java', version: '8.0.28'
-}
-
-test {
-    useJUnitPlatform()
 }
