--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,7 @@
 plugins {
     id 'java'
-    id 'war'
-    id 'org.gretty' version '3.0.9'
+    id 'org.springframework.boot' version '2.7.5'
+    id 'io.spring.dependency-management' version '1.0.15.RELEASE'
 }
 
 group 'com.vishal'
@@ -14,33 +14,13 @@ repositories {
         url "https://repo.spring.io/release"
     }
 }
-gretty {
-    httpPort = 8080
-    contextPath = '/'
-    servletContainer = 'tomcat9'
-}
 
 dependencies {
-    implementation group: 'org.springframework', name: 'spring-web', version: '5.3.23'
-    implementation group: 'org.springframework', name: 'spring-webmvc', version: '5.3.23'
-
-    //springmvc
-    implementation 'com.fasterxml.jackson.core:jackson-databind:2.13.4.2'
-    implementation 'javax.servlet:javax.servlet-api:4.0.1'
-    implementation 'javax.servlet.jsp:javax.servlet.jsp-api:2.3.3'
-    implementation 'javax.servlet.jsp.jstl:javax.servlet.jsp.jstl-api:1.2.2'
-    implementation "taglibs:standard:1.1.2"
-    implementation group: 'org.apache.tomcat', name: 'tomcat-jdbc', version: '7.0.28'
-
-    //hibernate
-    implementation group: 'org.hibernate', name: 'hibernate-entitymanager', version: '5.6.12.Final'
-    implementation 'org.hibernate:hibernate-core:5.6.12.Final'
-    testImplementation group: 'com.h2database', name: 'h2', version: '2.1.214'
+    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+    implementation 'org.springframework.boot:spring-boot-starter-web'
+    developmentOnly 'org.springframework.boot:spring-boot-devtools'
+    testImplementation 'org.springframework.boot:spring-boot-starter-test'
     implementation group: 'mysql', name: 'mysql-connector-java', version: '8.0.28'
-}
-
-test {
-    useJUnitPlatform()
 }
 
 allprojects{
