--- a/web/src/main/resources/application.yaml
+++ b/web/src/main/resources/application.yaml
@@ -3,8 +3,8 @@ spring:
     url: jdbc:mysql://localhost:3306/testdb
     username: vishal1
     password: Leegality@123
-    driverClassName: com.mysql.jdbc.Driver
-  jpa:
-    spring.jpa.database-platform: org.hibernate.dialect.MySQL5Dialect
-  h2:
-    console.enabled: true
+    jpa:
+      properties.hibernate.dialect: org.hibernate.dialect.MySQL5InnoDBDialect
+      hibernate.ddl-auto: update
+      generate-ddl: true
+      show-sql: true
